fix header being too wide

--- a/pages/static/pages/style.css
+++ b/pages/static/pages/style.css
@@ -109,10 +109,10 @@ article{
 article .article-header{
     background-size: cover;
     margin-left: -3em;
-    margin-top: -3em;
+    margin-top: -1em;
     padding-left: 5em;
     margin-bottom: 2em;
-    width: calc(100% - -5em);
+    width: calc(100% - 5em);
     height: 11em;
     background-position: center;
     position: relative;
